src/runtime-rs/vendor/actix-macros/tests/trybuild/main-05-system-expect-path.stderr
error: Expected path
 --> $DIR/main-05-system-expect-path.rs:1:27
  |
1 | #[actix_rt::main(system = "!@#*&")]
  |                           ^^^^^^^
