src/runtime-rs/vendor/actix-macros/tests/trybuild/main-05-system-expect-path.rs
#[actix_rt::main(system = "!@#*&")]
async fn main2() {}

fn main() {}
